--- a/AppointmentViewDemo/app/src/main/res/layout/day_layout.xml
+++ b/AppointmentViewDemo/app/src/main/res/layout/day_layout.xml
@@ -1,28 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="55dp"
+    android:layout_width="60dp"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:gravity="center"
         android:layout_gravity="center"
         android:text="8-18\n周一"/>
 
-    <Button
+    <TextView
         android:id="@+id/appoint"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:background="@color/colorPrimary"
         android:clickable="true"
         android:text="预约"/>
 
-    <Button
+    <TextView
         android:id="@+id/full"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:background="@color/colorPrimary"
         android:text="约满"/>
 
 </LinearLayout>
